use full js files instead of .min.js to debug angular issues

--- a/web/src/index.html
+++ b/web/src/index.html
@@ -13,22 +13,22 @@
   <!-- 3rd Party libs -->
   <script src="scripts/jquery/dist/jquery.min.js"></script>
   <script src="scripts/chart.js/dist/Chart.min.js"></script>
-  <script src="scripts/angular/angular.min.js"></script>
-  <script src="scripts/angular-resource/angular-resource.min.js"></script>
-  <script src="scripts/angular-route/angular-route.min.js"></script>
+  <script src="scripts/angular/angular.js"></script>
+  <script src="scripts/angular-resource/angular-resource.js"></script>
+  <script src="scripts/angular-route/angular-route.js"></script>
   <script src="scripts/ngstorage/ngStorage.min.js"></script>
-  <script src="scripts/angular-chart.js/dist/angular-chart.min.js"></script>
+  <script src="scripts/angular-chart.js/dist/angular-chart.js"></script>
   <script src="scripts/jsonformatter/dist/json-formatter.min.js"></script>
   <script src="scripts/ng-tags-input/build/ng-tags-input.min.js"></script>
   <script src="scripts/angular-utils-pagination/dirPagination.js"></script>
   <script src="scripts/ng-file-upload/dist/ng-file-upload.min.js"></script>
   <script src="scripts/xdate/src/xdate.js"></script>
   <script src="scripts/popper.js/dist/umd/popper.min.js"></script>
-  <script src="scripts/angular-socket-io/socket.min.js"></script>
+  <script src="scripts/angular-socket-io/socket.js"></script>
   <script src="scripts/socket.io-client/dist/socket.io.slim.js"></script>
   <script src="scripts/ng-jsyaml/angular-jsyaml.js"></script>
   <script src="scripts/js-yaml/dist/js-yaml.js"></script>
-  <script src="scripts/angular-sanitize/angular-sanitize.min.js"></script>
+  <script src="scripts/angular-sanitize/angular-sanitize.js"></script>
   <script src="scripts/simplemde/dist/simplemde.min.js"></script>
 
   <!-- 3rd Party CSS -->
